hopefully last correction on mobile

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ h5{
     width: 1109px;
     background: #172339;
     bottom: 0;
-    border-radius: 15px;
+    border-radius: 30px;
     z-index: -1;
     
 
@@ -376,13 +376,15 @@ and (max-width: 768px) {
     }
 
     .header{
-        width: 100vw;
+        width: 404px;
         height: 48px;
+        margin: 0;
     }
 
     body{
         padding: 50px 16px;
         width: 100vw;
+        overflow-x: hidden;
     }
 
     .top-most-button{
@@ -423,7 +425,7 @@ and (max-width: 768px) {
     .main-description{
         font-family: Epilogue;
         font-size: 38px;
-        font-weight: 700;
+        font-weight: 400;
         line-height: 44px;
         letter-spacing: -0.5277777910232544px;
         text-align: left;
@@ -473,7 +475,7 @@ and (max-width: 768px) {
     }
 
     .testimony{
-        width: inherit;
+        width: 404px;
         bottom: -30px;
         left: 34.4px;
         height: 783px;
@@ -528,7 +530,7 @@ and (max-width: 768px) {
     }
 
     footer{
-        width: 100vw;
+        width: 404px;
         top: 2218px;
         height: 297px;
     }
